Initial client-side design
